--- a/index.html
+++ b/index.html
@@ -55,115 +55,34 @@
             </p>
 
         </section>
-        <!--
-        <section id="projectes" aria-label="3 o 4 projectes molt relevants ara mateix">
 
-            <div class="project-item">
-                <div class="project-item-contingut">
-                    <h2>judici</h2>
-                    <a href="projectes/judici/judici.html">
-                        <img src="img/judici.jpg" alt="El Judici">
-                    </a>
-                    <p> Estructuras 3000 s'enfronta judicialment a ella mateixa, qüestionant participació, status quo i
-                        individualismes. Una part d’Estructuras 3000 denuncia a l’altra per haver actuat de manera
-                        unilateral.</p>
-                </div>
-                <a href="projectes/judici/judici.html">
-                    <div class="projecte-veure-mes">Veure més</div>
-                </a>
+        <section id="acompanyaments" aria-label="què pot fer la berta per tu">
+
+            <h2>puc ajudar-te a:</h2>
+
+            <ul>
+                <li>Realitzar els teus projectes expositius, culturals i/o artístics</li>
+                <li>Guiar-te en questions de comissariat i museografia</li>
+                <li>Redactar textos (fulls de sala, currículums d’artista, statements, dossiers…)</li>
+                <li>Estructurar el teu porfoli, web o projecte</li>
+                <li>Contrastar idees i facilitar-te referències (artístiques o de qualsevol altre àmbit!)</li>
+                <li>Construïr un marc teòric entorn la teva obra o investigació</li>
+                <li><del>Produïr la teva exposició o projecte (materialització, coordinació, recerca de materials, logística, muntatge, instal·lació d’obra i suports expositius, il·luminació…)</del> <span class="notas">(o lo fas mas corto o igual explicas un poco mas el resto y que la explicación sea desplegable y aparezca cuando haces hover o algo asi)</span></li>
+                <li>Mediar la teva exposició, performance, investigació…</li>
+                <li>Donar-te feedback dels teus assajos i recerques</li>
+                <li>Si t’interessa o tens alguna proposta que no estigui inclosa en aquesta llista contacta’m</li>
+            </ul>
+            
+            <p>generalment cobro les tutories a 25€ l’hora (impostos inclosos) i la resta de projectes caldria pressupostar-los :) </p>
+
+            <div class="image-gallery">
+                <div class="image-placeholder" style="width: 350px; height: 185px; background-color: grey;"></div>
+                <div class="image-placeholder" style="width: 350px; height: 185px; background-color: grey;"></div>
+                <div class="image-placeholder" style="width: 350px; height: 185px; background-color: grey;"></div>
             </div>
-
-            <div class="project-item">
-                <div class="project-item-contingut">
-                    <h2>escola 3000</h2>
-                    <a href="projectes/escola3000/escola3000.html">
-                        <img src="img/escola.jpg" alt="Escola 3000">
-                    </a>
-                    <p>L'Escola 3000 proposa un espai de reflexió col·lectiva als centres
-                        educatius sobre com
-                        l’arquitectura i el seu disseny modulen i intervenen en les dinàmiques de poder. Els dissenys es
-                        converteixen en espais teatrals on escenificar aquestes dinàmiques de poder a partir del teatre
-                        de l’oprimit.</p>
-                </div>
-                <a href="projectes/escola3000/escola3000.html">
-                    <div class="projecte-veure-mes">Veure més</div>
-                </a>
-            </div>
-
-            <div class="project-item">
-                <div class="project-item-contingut">
-                    <h2>peepshow</h2>
-                    <a href="projectes/peepshow/peepshow.html">
-                        <img src="img/peepshow.jpg" alt="Peepshow">
-                    </a>
-                    <p> El Peepshow és un dispositiu escènic que explora l’experiència expositiva individualitzant la
-                        mirada i fent-la anònima. Durant la instal·lació van performar artistes de diferents disciplines
-                        i la pròpia estructura permetia ser modificada a conveniència.
-                    </p>
-                </div>
-                <a href="projectes/peepshow/peepshow.html">
-                    <div class="projecte-veure-mes">Veure més</div>
-                </a>
-            </div>
-
-            <div class="project-item">
-                <div class="project-item-contingut">
-                    <h2>seminari d'artistes</h2>
-                    <a href="projectes/seminari/seminari.html">
-                        <img src="img/seminari.jpg" alt="seminari">
-                    </a>
-                    <p>Realització de conferències performativa entorn la pràctica artística
-                        col·lectiva a la Facultat
-                        de Belles Arts. Durant els seminaris es qüestionen temes d'individualització
-                        del sector artístic
-                        i es presenten diferents maneres de fer, organitzar-se i concebre la pràctica artística.</p>
-                </div>
-                <a href="projectes/seminari/seminari.html">
-                    <div class="projecte-veure-mes">Veure més</div>
-                </a>
-            </div>
-
-            <div class="project-item">
-                <div class="project-item-contingut">
-                    <h2>conferències</h2>
-                    <a href="projectes/conferencies/conferencies.html">
-                        <img src="img/conferencies.jpg" alt="conferències">
-                    </a>
-                    <p>Tot l’espai queda pintat de color negre pissarra per acollir conferències de diferents
-                        professionals i no-profesional al llarg de tres dies. Totes les parets van quedar recobertes de
-                        guix. L’única condició era que no estava permès fer fotos ni tampoc venir com a persona
-                        espectadora.
-                    </p>
-                </div>
-                <a href="projectes/conferencies/conferencies.html">
-                    <div class="projecte-veure-mes">Veure més</div>
-                </a>
-            </div>
-
-            <div class="project-item">
-                <div class="project-item-contingut">
-                    <h2>TNSTMTRTMR</h2>
-                    <a href="projectes/thereis/thereis.html">
-                        <img src="img/thereis.jpg"
-                            alt="no such thing as making too much Money or taking too many risks">
-                    </a>
-                    <p>Què passa quan portes a artistes reconeguts per exposar en el marc d'un cicle de creació jove i
-                        emergent? A partir de la creació d'un <i>white cube</i> apuntalat dins d'Estructures 3000
-                        l'espai comú
-                        queda anul·lat per tal d'acollir una obra cada dia per donar resposta a les condicions de
-                        precarització del sector artístic jove.
-                    </p>
-                </div>
-                <a href="projectes/thereis/thereis.html">
-                    <div class="projecte-veure-mes">Veure més</div>
-                </a>
-            </div>
-
-
 
         </section>
-
-        -->
+        
 
         <section id="contacte" aria-label="contacta amb la berta">
             <h4>
@@ -176,19 +95,20 @@
             </div>
         </section>
 
-
-        <div class="language-links"></div>
+<!--<div class="language-links"></div>-->
 
         <div class="menu-links">
             <a href="#berta">berta</a>
             <a href="#descripcio">descripció</a>
+            <a href="#acompanyaments">acompanyaments</a>
             <!--<a href="#projectes">projectes</a>-->
             <a href="#contacte">contacte</a>
         </div>
     </div>
 
-    <script src="script/languageLinks.js"></script>
+    <!--<script src="script/languageLinks.js"></script>-->
     <script src="script/styleLinks.js"></script>
+    <script src="script/styleBullet.js"></script>
     <!--este esta en test aun-->
     <script src="script/activeMenu.js"></script>
 
