seguimos ajustando responsive

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <section id="acompanyaments" aria-label="què pot fer la berta per tu">
 
-            <h2>puc ajudar-te a:</h2>
+            <!--<h2>puc ajudar-te a:</h2>-->
 
             <ul>
                 <li>Realitzar els teus projectes expositius, culturals i/o artístics</li>
