commit interrumpido por max y lluc

--- a/index.html
+++ b/index.html
@@ -55,9 +55,18 @@
 
         </section>
 
+        <section id="projectes">
+            <h4>curadoria i acompanyaments</h4>
+            <h4>investigació</h4>
+            <h4>exposicions</h4>
+            <h4>mediació</h4>
+            <h4>text i divulgació</h4>
+            <h4>grup d’estudi</h4>
+        </section>
+
         <section id="acompanyaments" aria-label="què pot fer la berta per tu">
 
-            <h4>puc ajudar-te a:</h4>
+            <h3>puc ajudar-te a:</h3>
 
             <ul>
                 <li>Realitzar els teus projectes expositius, culturals i/o artístics</li>
@@ -66,13 +75,17 @@
                 <li>Estructurar el teu porfoli, web o projecte</li>
                 <li>Contrastar idees i facilitar-te referències (artístiques o de qualsevol altre àmbit!)</li>
                 <li>Construïr un marc teòric entorn la teva obra o investigació</li>
-                <li><del>Produïr la teva exposició o projecte (materialització, coordinació, recerca de materials, logística, muntatge, instal·lació d’obra i suports expositius, il·luminació…)</del> <span class="notas">(o lo fas mas corto o igual explicas un poco mas el resto y que la explicación sea desplegable y aparezca cuando haces hover o algo asi)</span></li>
+                <li><del>Produïr la teva exposició o projecte (materialització, coordinació, recerca de materials,
+                        logística, muntatge, instal·lació d’obra i suports expositius, il·luminació…)</del> <span
+                        class="notas">(o lo fas mas corto o igual explicas un poco mas el resto y que la explicación sea
+                        desplegable y aparezca cuando haces hover o algo asi)</span></li>
                 <li>Mediar la teva exposició, performance, investigació…</li>
                 <li>Donar-te feedback dels teus assajos i recerques</li>
                 <li>Si t’interessa o tens alguna proposta que no estigui inclosa en aquesta llista contacta’m</li>
             </ul>
-            
-            <p>generalment cobro les tutories a 25€ l’hora (impostos inclosos) i la resta de projectes caldria pressupostar-los :) </p>
+
+            <p>generalment cobro les tutories a 25€ l’hora (impostos inclosos) i la resta de projectes caldria
+                pressupostar-los :) </p>
 
             <div class="image-gallery">
                 <div class="image-placeholder" style="width: 350px; height: 185px; background-color: grey;"></div>
@@ -81,12 +94,17 @@
             </div>
 
         </section>
-        
+
 
         <section id="contacte" aria-label="contacta amb la berta">
             <h4>
-                <a href="mailto:bertaestevemarco@gmail.com">bertaestevemarco@gmail.com</a>
+                <a href="mailto:bertaestevemarco@gmail.com">bertaestevemarco@gmail.com</a> <br>
             </h4>
+
+
+            <span class="notas" style="position: absolute; top: 50vh">podría ser quizá un sobre como los que habrán arriba pero que se entienda que es para
+                mandar un mail</span>
+
             <div class="contacte-llinks">
                 <h5><a href="instagram.com/snerta.esteve">@snerta.esteve</a></h5>
                 <h5><a href="instagram.com/unfunny_curator_official">@unfunny_curator_official</a></h5>
@@ -94,11 +112,12 @@
             </div>
         </section>
 
-<!--<div class="language-links"></div>-->
+        <!--<div class="language-links"></div>-->
 
         <div class="menu-links">
             <a href="#berta">berta</a>
-            <a href="#descripcio">descripció</a>
+            <a href="#descripcio">✉️ mi</a>
+            <a href="#projectes">projectes</a>
             <a href="#acompanyaments">acompanyaments</a>
             <!--<a href="#projectes">projectes</a>-->
             <a href="#contacte">contacte</a>
