cambios con berta

--- a/index.html
+++ b/index.html
@@ -26,32 +26,9 @@
             o igual sí lo más importante como recordatorioo para el colectivo
             pero no lo más llaminero para un usuario, me explico?-->
 
-            <p>Berta Esteve i Marcó (Barcelona, 1995) és curadora, artista i investigadora que experimenta amb les
-                formes, narratives i estructures de l’audiovisual contemporani, l’imaginari pop i la cultura
-                postinternet. Es dedica a tensar i explorar els límits de les estructures institucionals i acadèmiques
-                mitjançant l’humor i emfatitzant en la desjerarquització de sabers, assenyalant que es produeix
-                coneixement expert en espais no acadèmics; com per exemple, en l’autogestió i generació de narratives
-                transformadores de les comunitats de fanfiction (“You’re invited to my room”, 2018-2021) o en la
-                producció de cinema experimental i creació d’arxius col·lectius de les comunitats dels Backrooms (“The
-                Backrooms” 2022 - 2023). 
-            </p>
-            <p>
-                Graduada en Arts i Disseny a l’Escola Massana (2018) i postgraduada en Exposicions: Curadoria, disseny i
-                espai a EINA (2022), actualment cursa el màster d’Investigació en Art i Disseny, MURAD, on desenvolupa
-                una recerca entorn el concepte d’investigació performàtica vinculada al “jo laboral” dins del context
-                artístic. Ha exposat obra en espais com àngels barcelona o Las Cigarreras d’Alacant i ha acompanyat
-                exposicions i projectes de mediació a la xarxa de centres cívics de Barcelona, com al C.C. Pere Pruna,
-                el C.C. Urgell o Can Basté. És membre del col·lectiu d’artistes i curadores Grup d’Estudi des de 2020,
-                amb qui ha realitzat projectes curadorials, expositius, performàtics i de mediació a espais com La
-                Virreina CI, àngels barcelona, Fundació Brossa, Santa Mònica o La Capella. 
-            </p>
-
-            <p>Actualment, desenvolupa el projecte curatorial i de divulgació <a
-                    href="https://www.instagram.com/unfunny_curator_official/?hl=es">Unfunny_Curator</a> on duu a terme
-                una anàlisi
-                irònica i performàtica sobre el món de l’art, centrant-se concretament en el context barcelonès i
-                proposant encontres que hibriden els espais físics amb els espais digitals. 
-            </p>
+            <p>Berta Esteve i Marcó (Barcelona, 1995) és curadora, artista i investigadora que experimenta amb les formes, narratives i estructures de l’audiovisual contemporani, l’imaginari pop i la cultura postinternet. Es dedica a tensar i explorar els límits de les estructures institucionals i acadèmiques mitjançant l’humor i emfatitzant en la desjerarquització de sabers, assenyalant que es produeix coneixement expert en espais no acadèmics; com per exemple, en l’autogestió i generació de narratives transformadores de les comunitats de fanfiction o en la producció de cinema experimental i creació d’arxius col·lectius de les comunitats dels Backrooms.</p>
+            <p>Berta Esteve i Marcó és graduada en Arts i Disseny a l’Escola Massana (2018) i postgraduada en Exposicions: Curadoria, disseny i espai a EINA (2022), actualment cursa el màster d’Investigació en Art i Disseny, MURAD, on desenvolupa una recerca entorn el concepte d’investigació performàtica vinculada al “jo laboral” en el món de l’art. Ha exposat obra en espais com àngels barcelona o Las Cigarreras d’Alacant i ha acompanyat exposicions i projectes de mediació a la xarxa de centres cívics de Barcelona, com al C.C. Pere Pruna, el C.C. Urgell o Can Basté.</p>
+            <p>Berta Esteve i Marcó és membre del col·lectiu Grup d’Estudi des de 2020, amb qui ha realitzat projectes curadorials, expositius, performàtics i de mediació a espais com La Virreina CI, àngels barcelona, Fundació Brossa, Santa Mònica o La Capella. Actualment, desenvolupa el projecte de divulgació crítica <a href="https://www.instagram.com/unfunny_curator_official/">Unfunny_Curator</a>, on duu a terme una anàlisi irònica i performàtica sobre el món de l’art de Barcelona que hibrida els espais físics amb els digitals.</p>
 
         </section>
 
@@ -75,19 +52,16 @@
                 <li>Estructurar el teu porfoli, web o projecte</li>
                 <li>Contrastar idees i facilitar-te referències (artístiques o de qualsevol altre àmbit!)</li>
                 <li>Construïr un marc teòric entorn la teva obra o investigació</li>
-                <li><del>Produïr la teva exposició o projecte (materialització, coordinació, recerca de materials,
-                        logística, muntatge, instal·lació d’obra i suports expositius, il·luminació…)</del> <span
-                        class="notas">(o lo fas mas corto o igual explicas un poco mas el resto y que la explicación sea
-                        desplegable y aparezca cuando haces hover o algo asi)</span></li>
+                <li>Ajudar-te en la coordinació, logística, muntatge, instal·lació, il·luminació del teu projecte. </li>
                 <li>Mediar la teva exposició, performance, investigació…</li>
                 <li>Donar-te feedback dels teus assajos i recerques</li>
                 <li>Si t’interessa o tens alguna proposta que no estigui inclosa en aquesta llista contacta’m</li>
             </ul>
 
             <p>generalment cobro les tutories a 25€ l’hora (impostos inclosos) i la resta de projectes caldria
-                pressupostar-los :) </p>
+                pressupostar-los :-) </p>
 
-            <div class="image-gallery">
+            <div class="image-gallery" style="margin-top: 20px;">
                 <div class="image-placeholder" style="width: 350px; height: 185px; background-color: grey;"></div>
                 <div class="image-placeholder" style="width: 350px; height: 185px; background-color: grey;"></div>
                 <div class="image-placeholder" style="width: 350px; height: 185px; background-color: grey;"></div>
@@ -98,12 +72,8 @@
 
         <section id="contacte" aria-label="contacta amb la berta">
             <h4>
-                <a href="mailto:bertaestevemarco@gmail.com">bertaestevemarco@gmail.com</a> <br>
+                <a href="mailto:berta.esteve.marco@gmail.com">berta.esteve.marco@gmail.com</a> <br>
             </h4>
-
-
-            <span class="notas" style="position: absolute; top: 50vh">podría ser quizá un sobre como los que habrán arriba pero que se entienda que es para
-                mandar un mail</span>
 
             <div class="contacte-llinks">
                 <h5><a href="instagram.com/snerta.esteve">@snerta.esteve</a></h5>
@@ -116,7 +86,7 @@
 
         <div class="menu-links">
             <a href="#berta">berta</a>
-            <a href="#descripcio">✉️ mi</a>
+            <a href="#descripcio">sobre mi</a>
             <a href="#projectes">projectes</a>
             <a href="#acompanyaments">acompanyaments</a>
             <!--<a href="#projectes">projectes</a>-->
