--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         </section>
 
         <section id="projectes">
-            <h4>curadoria i acompanyaments</h4>
-            <h4>investigació</h4>
-            <h4>exposicions</h4>
-            <h4>mediació</h4>
-            <h4>text i divulgació</h4>
-            <h4>grup d’estudi</h4>
+            <h4><a href="projectes.html#curadoria">curadoria i acompanyaments</a></h4>
+            <h4><a href="projectes.html#investigacio">investigació</a></h4>
+            <h4><a href="projectes.html#exposicions">exposicions</a></h4>
+            <h4><a href="projectes.html#mediacio">mediació</a></h4>
+            <h4><a href="projectes.html#text">text i divulgació</a></h4>
+            <h4><a href="projectes.html#grup-estudi">grup d’estudi</a></h4>
         </section>
 
         <section id="acompanyaments" aria-label="què pot fer la berta per tu">
@@ -61,7 +61,7 @@
             <p>generalment cobro les tutories a 25€ l’hora (impostos inclosos) i la resta de projectes caldria
                 pressupostar-los :-) </p>
 
-            <div class="image-gallery" style="margin-top: 20px;">
+            <div class="image-gallery">
                 <div class="image-placeholder" style="width: 350px; height: 185px; background-color: grey;"></div>
                 <div class="image-placeholder" style="width: 350px; height: 185px; background-color: grey;"></div>
                 <div class="image-placeholder" style="width: 350px; height: 185px; background-color: grey;"></div>
@@ -76,9 +76,9 @@
             </h4>
 
             <div class="contacte-llinks">
-                <h5><a href="instagram.com/snerta.esteve">@snerta.esteve</a></h5>
-                <h5><a href="instagram.com/unfunny_curator_official">@unfunny_curator_official</a></h5>
-                <h5><a href="instagram.com/grupdestudi">@grupdestudi</a></h5>
+                <h5><a href="https://instagram.com/snerta.esteve">@snerta.esteve</a></h5>
+                <h5><a href="https://instagram.com/unfunny_curator_official">@unfunny_curator_official</a></h5>
+                <h5><a href="https://instagram.com/grupdestudi">@grupdestudi</a></h5>
             </div>
         </section>
 
