--- a/projectes.html
+++ b/projectes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ca">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="script/renderProjectes.js" defer></script>
 </head>
+
 <body>
   <div class="container">
     <section id="projectes-list">
@@ -14,12 +16,14 @@
     </section>
     <!-- El menú flotante lo dejas igual que en index.html -->
     <div class="menu-links">
-      <a href="index.html#berta">berta</a>
-      <a href="index.html#descripcio">sobre mi</a>
-      <a href="index.html#projectes">projectes</a>
-      <a href="index.html#acompanyaments">acompanyaments</a>
-      <a href="index.html#contacte">contacte</a>
+      <a href="projectes.html#curadoria">curadoria i acompanyaments</a>
+      <a href="projectes.html#investigacio">investigació</a>
+      <a href="projectes.html#exposicions">exposicions</a>
+      <a href="projectes.html#mediacio">mediació</a>
+      <a href="projectes.html#text">text i divulgació</a>
+      <a href="projectes.html#grup-estudi">grup d’estudi</a>
     </div>
   </div>
 </body>
+
 </html>
