faltan css projectes & projecte

--- a/index.html
+++ b/index.html
@@ -19,6 +19,30 @@
             <h1>
                 berta esteve
             </h1>
+
+            <div class="berta-links">
+                <a href="#grupdestudi" class="link-sobre sobre1">
+                    <img src="img/sobre_1.png" alt="" class="bg-sobre" />
+                    sobre grup d'estudi
+                </a>
+                <a href="#unfunny" class="link-sobre sobre2">
+                    <img src="img/sobre_2.png" alt="" class="bg-sobre" />
+                    sobre Unfunny_Curator
+                </a>
+                <a href="#fanfiction" class="link-sobre sobre3">
+                    <img src="img/sobre_3.png" alt="" class="bg-sobre" />
+                    sobre fanfiction
+                </a>
+                <a href="#backrooms" class="link-sobre sobre4">
+                    <img src="img/sobre_4.png" alt="" class="bg-sobre" />
+                    sobre els backrooms
+                </a>
+            </div>
+
+            <div class="berta-subtext">
+                <p>curadora, investigadora i artista</p>
+                <p>creant ponts entre l’acadèmia i la cultura d’internet<br>investigació performàtica :-)</p>
+            </div>
         </section>
         <section id="descripcio" aria-label="descripció de la berta">
 
@@ -112,18 +136,11 @@
         </div>
 
         <div class="menu-links menu-arriba">
-            <a href="?lang=cat">CAT</a> 
-            <a href="?lang=es">ES</a> 
+            <a href="?lang=cat">CAT</a>
+            <a href="?lang=es">ES</a>
             <a href="?lang=en">EN</a>
         </div>
     </div>
-
-    <!--<script src="script/languageLinks.js"></script>-->
-    <script src="script/styleLinks.js"></script>
-    <script src="script/styleBullet.js"></script>
-    <!--este esta en test aun-->
-    <script src="script/activeMenu.js"></script>
-
 
 </body>
 
