wrokin!! queda que berta suba cosas

--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
             </h1>
 
             <div class="berta-links">
-                <a href="#grupdestudi" class="link-sobre sobre1">
+                <a href="projecte.html?slug=grupdestudi" class="link-sobre sobre1">
                     <img src="img/sobre_1.png" alt="" class="bg-sobre" />
                     sobre grup d'estudi
                 </a>
-                <a href="#unfunny" class="link-sobre sobre2">
+                <a href="/projecte.html?slug=unfunny-curator" class="link-sobre sobre2">
                     <img src="img/sobre_2.png" alt="" class="bg-sobre" />
                     sobre Unfunny_Curator
                 </a>
-                <a href="#fanfiction" class="link-sobre sobre3">
+                <a href="/projecte.html?slug=fanfiction" class="link-sobre sobre3">
                     <img src="img/sobre_3.png" alt="" class="bg-sobre" />
                     sobre fanfiction
                 </a>
-                <a href="#backrooms" class="link-sobre sobre4">
+                <a href="projecte.html?slug=backrooms" class="link-sobre sobre4">
                     <img src="img/sobre_4.png" alt="" class="bg-sobre" />
                     sobre els backrooms
                 </a>
@@ -41,7 +41,7 @@
 
             <div class="berta-subtext">
                 <p>curadora, investigadora i artista</p>
-                <p>creant ponts entre l’acadèmia i la cultura d’internet<br>investigació performàtica :-)</p>
+                <p>creant ponts entre l’acadèmia i la cultura d’internet</p>
             </div>
         </section>
         <section id="descripcio" aria-label="descripció de la berta">
@@ -73,12 +73,12 @@
         </section>
 
         <section id="projectes">
-            <h4><a href="projectes.html#curadoria">curadoria i acompanyaments</a></h4>
+            <h4><a href="projectes.html#curadoria">curadoria</a></h4>
             <h4><a href="projectes.html#investigacio">investigació</a></h4>
             <h4><a href="projectes.html#exposicions">exposicions</a></h4>
             <h4><a href="projectes.html#mediacio">mediació</a></h4>
-            <h4><a href="projectes.html#text">text i divulgació</a></h4>
-            <h4><a href="projectes.html#grup-estudi">grup d’estudi</a></h4>
+            <h4><a href="projectes.html#text">divulgació</a></h4>
+            <h4><a href="projectes.html#grupdestudi">grup d’estudi</a></h4>
         </section>
 
         <section id="acompanyaments" aria-label="què pot fer la berta per tu">
@@ -120,7 +120,7 @@
             <div class="contacte-llinks">
                 <h5><a href="https://instagram.com/snerta.esteve">@snerta.esteve</a></h5>
                 <h5><a href="https://instagram.com/unfunny_curator_official">@unfunny_curator_official</a></h5>
-                <h5><a href="https://instagram.com/grupdestudi">@grupdestudi</a></h5>
+                <!-- <h5><a href="https://instagram.com/grupdestudi">@grupdestudi</a></h5> -->
             </div>
         </section>
 
