--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
             <a href="#contacte">contacte</a>
         </div>
 
-        <div class="menu-links menu-arriba">
+        <!-- <div class="menu-links menu-arriba">
             <a href="?lang=cat">CAT</a>
             <a href="?lang=es">ES</a>
             <a href="?lang=en">EN</a>
-        </div>
+        </div> -->
     </div>
 
 </body>
