--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <div class="container">
         <section id="berta">
             <h1>
-                berta esteve
+                berta
             </h1>
 
             <div class="berta-links">
-                <a href="projecte.html?slug=grupdestudi" class="link-sobre sobre1">
+                <a href="/projecte.html?slug=grupdestudi" class="link-sobre sobre1">
                     <img src="img/sobre_1.png" alt="" class="bg-sobre" />
                     sobre grup d'estudi
                 </a>
@@ -41,7 +41,7 @@
 
             <div class="berta-subtext">
                 <p>curadora, investigadora i artista</p>
-                <p>creant ponts entre l’acadèmia i la cultura d’internet</p>
+                <p>entre l’acadèmia i la cultura d’internet</p>
             </div>
         </section>
         <section id="descripcio" aria-label="descripció de la berta">
@@ -50,25 +50,21 @@
             o igual sí lo más importante como recordatorioo para el colectivo
             pero no lo más llaminero para un usuario, me explico?-->
 
-            <p>Berta Esteve i Marcó (Barcelona, 1995) és curadora, artista i investigadora que experimenta amb les
-                formes, narratives i estructures de l’audiovisual contemporani, l’imaginari pop i la cultura
-                postinternet. Es dedica a tensar i explorar els límits de les estructures institucionals i acadèmiques
-                mitjançant l’humor i emfatitzant en la desjerarquització de sabers, assenyalant que es produeix
-                coneixement expert en espais no acadèmics; com per exemple, en l’autogestió i generació de narratives
-                transformadores de les comunitats de fanfiction o en la producció de cinema experimental i creació
-                d’arxius col·lectius de les comunitats dels Backrooms.</p>
-            <p>Berta Esteve i Marcó és graduada en Arts i Disseny a l’Escola Massana (2018) i postgraduada en
-                Exposicions: Curadoria, disseny i espai a EINA (2022), actualment cursa el màster d’Investigació en Art
-                i Disseny, MURAD, on desenvolupa una recerca entorn el concepte d’investigació performàtica vinculada al
-                “jo laboral” en el món de l’art. Ha exposat obra en espais com àngels barcelona o Las Cigarreras
-                d’Alacant i ha acompanyat exposicions i projectes de mediació a la xarxa de centres cívics de Barcelona,
-                com al C.C. Pere Pruna, el C.C. Urgell o Can Basté.</p>
-            <p>Berta Esteve i Marcó és membre del col·lectiu Grup d’Estudi des de 2020, amb qui ha realitzat projectes
-                curadorials, expositius, performàtics i de mediació a espais com La Virreina CI, àngels barcelona,
-                Fundació Brossa, Santa Mònica o La Capella. Actualment, desenvolupa el projecte de divulgació crítica <a
-                    href="https://www.instagram.com/unfunny_curator_official/">Unfunny_Curator</a>, on duu a terme una
-                anàlisi irònica i performàtica sobre el món de l’art de Barcelona que hibrida els espais físics amb els
-                digitals.</p>
+            <p>Soc curadora, artista i investigadora especialitzada en l’acompanyament de projectes i la producció
+                d’exposicions. En els meus projectes hibrido la crítica institucional amb les estètiques, narratives i
+                estructures de l’audiovisual contemporani, l’imaginari pop i la cultura d’internet. En son exemple les
+                investigacions “You’re invited to my room” (2018-2022), sobre el fenomen del fanfiction o “The
+                Backrooms” (2022-2024), sobre la llegenda de terror cibernètica dels backrooms.</p>
+            <p>Tinc formació en arts i disseny, curadoria i investigació artística. He realitzat projectes artístics i
+                curatorials a espais com La Capella, Las Cigarreras d’Alacant, àngels barcelona, Santa Mònica o La
+                Fundació Brossa, i he coordinat i acompanyat múltiples exposicions a la xarxa de centres cívics de
+                Barcelona. També soc membre del col·lectiu d’artistes i curadores <a href="https://www.instagram.com/grupdestudi/" target="_blank">Grup d'Estudi</a>.</p>
+            <p>Actualment duc a terme el projecte <a href="/projecte.html?slug=unfunny-curator">Unfunny_Curator</a>, un alter ego curatorial i projecte de mediació que
+                analitza de manera irònica les diverses problemàtiques del món de l’art local. Un dispositiu performàtic
+                que hibrida els espais físics amb els espais digitals.
+            </p>
+
+            <a href="data/arxius/sobre_1.png" target="_blank">cv complet</a>
 
         </section>
 
