--- a/404.html
+++ b/404.html
@@ -10,7 +10,8 @@
 <body>
   <div class="error-container">
     <h1>404</h1>
-    <p>T’has perdut. Torna a <a href="home.html">casa</a></p>
+    <p>ups! encara no ho he fet 🤡</p>
+
   </div>
 
     <div class="menu-links menu-abajo">
