--- a/index.html
+++ b/index.html
@@ -17,32 +17,32 @@
     <div class="container">
         <section id="berta">
             <h1>
-                berta esteve 
-        
+                berta esteve
+
             </h1>
 
             <div class="berta-links">
-                <a href="/projecte.html?slug=grupdestudi" class="link-sobre sobre1">
-                    <img src="img/sobregris_3.png" alt="" class="bg-sobre" />
+                <a href="projecte.html?slug=grup-destudi" class="link-sobre sobre1">
+                    <img src="img/sobreclar_3.png" alt="" class="bg-sobre" />
                     sobre grup d'estudi
                 </a>
-                <a href="/projecte.html?slug=unfunny-curator" class="link-sobre sobre2">
-                    <img src="img/sobregris_2.png" alt="" class="bg-sobre" />
+                <a href="projecte.html?slug=unfunny-curator" class="link-sobre sobre2">
+                    <img src="img/sobreclar_2.png" alt="" class="bg-sobre" />
                     sobre Unfunny_Curator
                 </a>
-                <a href="/projecte.html?slug=fanfiction" class="link-sobre sobre3">
-                    <img src="img/sobregris_3.png" alt="" class="bg-sobre" />
+                <a href="projecte.html?slug=sobre-fanfiction" class="link-sobre sobre3">
+                    <img src="img/sobreclar_3.png" alt="" class="bg-sobre" />
                     sobre fanfiction
                 </a>
                 <a href="projecte.html?slug=backrooms" class="link-sobre sobre4">
-                    <img src="img/sobregris_4.png" alt="" class="bg-sobre" />
+                    <img src="img/sobreclar_4.png" alt="" class="bg-sobre" />
                     sobre els backrooms
                 </a>
             </div>
 
             <div class="berta-subtext">
                 <p>curadora, investigadora i artista</p>
-                <p>expos, jajas & internet <3</p>
+                <p>expos, jajas & internet ♥︎ </p>
             </div>
         </section>
         <section id="descripcio" aria-label="descripció de la berta">
@@ -56,14 +56,17 @@
                 estructures de l’audiovisual contemporani, l’imaginari pop i la cultura d’internet.</p>
             <p>Tinc formació en arts i disseny, curadoria i investigació artística. He realitzat projectes artístics i
                 curatorials a espais com La Capella, Las Cigarreras d’Alacant, àngels barcelona, Santa Mònica o La
-                Fundació Brossa, i he coordinat i acompanyat múltiples exposicions a la xarxa de centres cívics de
-                Barcelona, com al C.C. Pere Pruna, al C.C. Urgell o a Can Basté. També soc membre del col·lectiu d’artistes i curadores <a href="https://www.instagram.com/grupdestudi/" target="_blank">Grup d'Estudi</a>.</p>
-            <p>Actualment duc a terme el projecte <a href="/projecte.html?slug=unfunny-curator">Unfunny_Curator</a>, un alter ego curatorial i projecte de mediació que
-                analitza de manera irònica les diverses problemàtiques del món de l’art local. Es tracta d'un dispositiu performàtic
-                que hibrida els espais físics amb els espais digitals, havent-se activat a espais com Hangar, la Fundació Miró o Lo Pardal.
+                Fundació Brossa, i he coordinat exposicions centres cívics com el C.C. Pere Pruna, al C.C. Urgell o a
+                Can Basté. També soc membre del col·lectiu d’artistes i curadores <a
+                    href="https://www.instagram.com/grupdestudi/" target="_blank">Grup d'Estudi</a>.</p>
+            <p>Actualment duc a terme el projecte <a href="/projecte.html?slug=unfunny-curator">Unfunny_Curator</a>, un
+                alter ego curatorial i projecte de mediació que reflexiona sobre diverses problemàtiques del món de
+                l’art local. Es tracta d'un dispositiu performàtic
+                que hibrida els espais físics amb els espais digitals, experimentant amb el format meme i havent-se
+                activat a espais com Hangar, la Fundació Miró o Lo Pardal.
             </p>
 
-            <a href="data/arxius/sobre_1.png" target="_blank">cv complet</a>
+            <a href="" target="_blank">cv complet</a>
 
         </section>
 
@@ -101,8 +104,9 @@
                 </li>
             </ul>
 
-            
-            <p>projectes artistics, expositius i/o culturals <br> generalment cobro les tutories a 30€/h (impostos inclosos) <br> i la resta de projectes caldria
+
+            <p>projectes artistics, expositius i/o culturals <br> generalment cobro les tutories a 35€/h (impostos
+                inclosos) <br> i la resta de projectes caldria
                 pressupostar-los :-) </p>
 
         </section>
@@ -120,6 +124,10 @@
                     <h5><a href="https://instagram.com/unfunny_curator_official">@unfunny_curator_official</a></h5>
                 </li>
             </ul>
+
+            <div class="meowrhino">
+                <small>web: <a href="https://meowrhino.github.io/becasDigMeow/">meowrhino</a></small>
+            </div>
             <!-- <h4>
             </h4>
 
